[package]
name = "custom-logging-burgers"
version = "0.1.0"
edition = "2021"
description = "Excercise in custom loggers, following https://burgers.io/custom-logging-in-rust-using-tracing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.3"

